--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,10 @@
           package="com.richieapps.actionbarstyles"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="15"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15"/>
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/ic_launcher"
+                 android:theme="@style/Theme.abstyles">
         <activity android:name="ActionBarActivity"
                   android:label="@string/app_name">
             <intent-filter>
